implementation de la logique metier, expception et documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,39 @@
 spring.application.name=projet_Ntousse_tadiha_vanisco
+
+# Database Configuration
+spring.datasource.url=jdbc:h2:mem:bankdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+# H2 Console
+spring.h2.console.enabled=true
+
+# Server Port
+server.port=8080
+
+# Logging Configuration générale
+logging.level.org.formation=INFO
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+
+# Fichier de log principal
+#logging.file.name=logs/bank-app.log
+
+# Configuration spécifique pour les logs de virements
+logging.logback.rollingpolicy.file-name-pattern=logs/virements-%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.clean-history-on-start=false
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=30
+logging.logback.rollingpolicy.total-size-cap=1GB
+
+# Niveau spécifique pour le logger des virements
+logging.level.virement-log=INFO
+
+# AOP Configuration
+spring.aop.auto=true
